Closed Bug 728462 Opened 13 years ago Closed 13 years ago

GCC build warning: nsPresShell.cpp:691:15: warning: ‘size_t GfxTextrunWordCacheMallocSizeOf(const void*)’ defined but not used

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

nsPresShell.cpp:691:15: warning: ‘size_t GfxTextrunWordCacheMallocSizeOf(const void*)’ defined but not used [-Wunused-function] This is defined here: 691 NS_MEMORY_REPORTER_MALLOC_SIZEOF_FUN(GfxTextrunWordCacheMallocSizeOf, "gfx/textrun-word-cache") http://mxr.mozilla.org/mozilla-central/source/layout/base/nsPresShell.cpp#691 There was only ever one use of this variable, and it was removed here in bug 703100: http://hg.mozilla.org/mozilla-central/rev/05fff11a2781
Attached patch fix (obsolete) — Splinter Review
Attachment #598416 - Flags: review?(jfkthame)
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Comment on attachment 598416 [details] [diff] [review] fix oops, this got some unrelated work included. fixed patch coming up.
Attachment #598416 - Attachment is obsolete: true
Attachment #598416 - Flags: review?(jfkthame)
Attached patch fixSplinter Review
Attachment #598421 - Flags: review?(jfkthame)
Comment on attachment 598421 [details] [diff] [review] fix Review of attachment 598421 [details] [diff] [review]: ----------------------------------------------------------------- Yup, that's obsolete. Kill it.
Attachment #598421 - Flags: review?(jfkthame) → review+
OS: Linux → All
Hardware: x86_64 → All
Target Milestone: --- → mozilla13
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: