Bug 728462: Remove declaration of no-longer-used 'GfxTextrunWordCacheMallocSizeOf'. r=jfkthame